[package]
name = "wsgidragoncall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wsgidragoncall"
crate-type = ["cdylib"]

[dependencies]
http-types = "2.12.0"
mio = "0.7.14"
mio_httpc = {version = "0.9.5", features = ["openssl"]}
serde = "1.0.130"
serde_json = "1.0.69"

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]
